2002-07-22  Gary Thomas  <gary@chez-thomas.org>

	* src/viper.S: 
	* cdl/hal_powerpc_viper.cdl: 
	Support choices of 47.9, 51.6 MHz for the system clock.

2002-07-18  Gary Thomas  <gary@chez-thomas.org>

	* src/viper.S: Increase power-up delay before starting SDRAM.

2002-07-11  Gary Thomas  <gary@chez-thomas.org>

	* cdl/hal_powerpc_viper.cdl: Add SCC1 as a serial console port.

2002-06-27  Gary Thomas  <gary@chez-thomas.org>

	* include/plf_regs.h: New file - platform overrides.

2002-06-25  Gary Thomas  <gary@chez-thomas.org>

	* src/redboot_linux_exec.c:
	* cdl/hal_powerpc_viper.cdl: Add Linux boot (exec) command.

2002-06-24  Gary Thomas  <gary@chez-thomas.org>

	* misc/redboot_ROMRAM.ecm: Update for new FLASH chips.

2002-06-20  Gary Thomas  <gary@chez-thomas.org>

	* src/viper.S: 
	* src/hal_aux.c: Support up to 8M of FLASH space.

2002-05-30  John Dallaway  <jld@redhat.com>

	* include/pkgconf/mlt*: Regenerated memory layout files.

2002-04-30  Nick Garnett  <nickg@redhat.com>

	* src/viper.S: Changed boot ROM wait states from 4 to 7.

2002-04-16  Gary Thomas  <gthomas@redhat.com>

	* misc/redboot_ROMRAM.ecm: 
	RedBoot now requires 0x30000 in this configuration.

2002-04-11  Gary Thomas  <gthomas@redhat.com>

	* include/plf_cache.h: Use common CDL for cache control.

2002-04-10  Gary Thomas  <gthomas@redhat.com>

	* src/hal_aux.c (hal_platform_init): Avoid resetting ethernet PHY chip.

	* include/plf_cache.h: [Re]enable caches.

	* cdl/hal_powerpc_viper.cdl: Fix RTC calculations.

2002-04-08  Gary Thomas  <gthomas@redhat.com>

	* src/viper.S: Lots of changes to get ROMRAM mode working from
	initial FLASH boot.

2002-03-08  Gary Thomas  <gthomas@redhat.com>

	* src/viper.S: 
	* misc/redboot_ROMRAM.ecm: 
	* include/pkgconf/mlt_powerpc_viper_romram.mlt: 
	* include/pkgconf/mlt_powerpc_viper_romram.ldi: 
	* include/pkgconf/mlt_powerpc_viper_romram.h: 
	* include/pkgconf/mlt_powerpc_viper_ram.mlt: 
	* include/pkgconf/mlt_powerpc_viper_ram.ldi: 